parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DECFUNC

Grammar

Rule 0     S' -> start
Rule 1     start -> bloc
Rule 2     bloc -> bloc statement SEMICOLON
Rule 3     bloc -> statement SEMICOLON
Rule 4     statement -> PRINT LPAREN expression RPAREN
Rule 5     statement -> NAME AFFECT expression
Rule 6     statement -> IF LPAREN expression RPAREN LACCOLADE bloc RACCOLADE
Rule 7     statement -> WHILE LPAREN expression RPAREN LACCOLADE bloc RACCOLADE
Rule 8     statement -> FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LACCOLADE bloc RACCOLADE
Rule 9     multiname -> NAME VIRG multiname
Rule 10    multiname -> NAME
Rule 11    multiExpr -> expression VIRG multiExpr
Rule 12    multiExpr -> expression
Rule 13    statement -> FUNCTION NAME LPAREN RPAREN LACCOLADE bloc RACCOLADE
Rule 14    statement -> FUNCTION NAME LPAREN multiname RPAREN LACCOLADE bloc RACCOLADE
Rule 15    statement -> NAME LPAREN RPAREN
Rule 16    statement -> NAME LPAREN multiExpr RPAREN
Rule 17    expression -> expression PLUS expression
Rule 18    expression -> expression TIMES expression
Rule 19    expression -> expression MINUS expression
Rule 20    expression -> expression DIVIDE expression
Rule 21    expression -> expression AND expression
Rule 22    expression -> expression OR expression
Rule 23    expression -> expression INF expression
Rule 24    expression -> expression SUP expression
Rule 25    expression -> expression EQUALS expression
Rule 26    expression -> LPAREN expression RPAREN
Rule 27    expression -> NUMBER
Rule 28    expression -> NAME
Rule 29    expression -> TRUE
Rule 30    expression -> FALSE

Terminals, with rules where they appear

AFFECT               : 5
AND                  : 21
DECFUNC              : 
DIVIDE               : 20
EQUALS               : 25
FALSE                : 30
FOR                  : 8
FUNCTION             : 13 14
IF                   : 6
INF                  : 23
LACCOLADE            : 6 7 8 13 14
LPAREN               : 4 6 7 8 13 14 15 16 26
MINUS                : 19
NAME                 : 5 9 10 13 14 15 16 28
NUMBER               : 27
OR                   : 22
PLUS                 : 17
PRINT                : 4
RACCOLADE            : 6 7 8 13 14
RPAREN               : 4 6 7 8 13 14 15 16 26
SEMICOLON            : 2 3 8 8
SUP                  : 24
TIMES                : 18
TRUE                 : 29
VIRG                 : 9 11
WHILE                : 7
error                : 

Nonterminals, with rules where they appear

bloc                 : 1 2 6 7 8 13 14
expression           : 4 5 6 7 8 11 12 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26
multiExpr            : 11 16
multiname            : 9 14
start                : 0
statement            : 2 3 8 8

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . bloc
    (2) bloc -> . bloc statement SEMICOLON
    (3) bloc -> . statement SEMICOLON
    (4) statement -> . PRINT LPAREN expression RPAREN
    (5) statement -> . NAME AFFECT expression
    (6) statement -> . IF LPAREN expression RPAREN LACCOLADE bloc RACCOLADE
    (7) statement -> . WHILE LPAREN expression RPAREN LACCOLADE bloc RACCOLADE
    (8) statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LACCOLADE bloc RACCOLADE
    (13) statement -> . FUNCTION NAME LPAREN RPAREN LACCOLADE bloc RACCOLADE
    (14) statement -> . FUNCTION NAME LPAREN multiname RPAREN LACCOLADE bloc RACCOLADE
    (15) statement -> . NAME LPAREN RPAREN
    (16) statement -> . NAME LPAREN multiExpr RPAREN

    PRINT           shift and go to state 4
    NAME            shift and go to state 5
    IF              shift and go to state 6
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    FUNCTION        shift and go to state 9

    start                          shift and go to state 1
    bloc                           shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> start .



state 2

    (1) start -> bloc .
    (2) bloc -> bloc . statement SEMICOLON
    (4) statement -> . PRINT LPAREN expression RPAREN
    (5) statement -> . NAME AFFECT expression
    (6) statement -> . IF LPAREN expression RPAREN LACCOLADE bloc RACCOLADE
    (7) statement -> . WHILE LPAREN expression RPAREN LACCOLADE bloc RACCOLADE
    (8) statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LACCOLADE bloc RACCOLADE
    (13) statement -> . FUNCTION NAME LPAREN RPAREN LACCOLADE bloc RACCOLADE
    (14) statement -> . FUNCTION NAME LPAREN multiname RPAREN LACCOLADE bloc RACCOLADE
    (15) statement -> . NAME LPAREN RPAREN
    (16) statement -> . NAME LPAREN multiExpr RPAREN

    $end            reduce using rule 1 (start -> bloc .)
    PRINT           shift and go to state 4
    NAME            shift and go to state 5
    IF              shift and go to state 6
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    FUNCTION        shift and go to state 9

    statement                      shift and go to state 10

state 3

    (3) bloc -> statement . SEMICOLON

    SEMICOLON       shift and go to state 11


state 4

    (4) statement -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 12


state 5

    (5) statement -> NAME . AFFECT expression
    (15) statement -> NAME . LPAREN RPAREN
    (16) statement -> NAME . LPAREN multiExpr RPAREN

    AFFECT          shift and go to state 13
    LPAREN          shift and go to state 14


state 6

    (6) statement -> IF . LPAREN expression RPAREN LACCOLADE bloc RACCOLADE

    LPAREN          shift and go to state 15


state 7

    (7) statement -> WHILE . LPAREN expression RPAREN LACCOLADE bloc RACCOLADE

    LPAREN          shift and go to state 16


state 8

    (8) statement -> FOR . LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LACCOLADE bloc RACCOLADE

    LPAREN          shift and go to state 17


state 9

    (13) statement -> FUNCTION . NAME LPAREN RPAREN LACCOLADE bloc RACCOLADE
    (14) statement -> FUNCTION . NAME LPAREN multiname RPAREN LACCOLADE bloc RACCOLADE

    NAME            shift and go to state 18


state 10

    (2) bloc -> bloc statement . SEMICOLON

    SEMICOLON       shift and go to state 19


state 11

    (3) bloc -> statement SEMICOLON .

    PRINT           reduce using rule 3 (bloc -> statement SEMICOLON .)
    NAME            reduce using rule 3 (bloc -> statement SEMICOLON .)
    IF              reduce using rule 3 (bloc -> statement SEMICOLON .)
    WHILE           reduce using rule 3 (bloc -> statement SEMICOLON .)
    FOR             reduce using rule 3 (bloc -> statement SEMICOLON .)
    FUNCTION        reduce using rule 3 (bloc -> statement SEMICOLON .)
    $end            reduce using rule 3 (bloc -> statement SEMICOLON .)
    RACCOLADE       reduce using rule 3 (bloc -> statement SEMICOLON .)


state 12

    (4) statement -> PRINT LPAREN . expression RPAREN
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression AND expression
    (22) expression -> . expression OR expression
    (23) expression -> . expression INF expression
    (24) expression -> . expression SUP expression
    (25) expression -> . expression EQUALS expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . NAME
    (29) expression -> . TRUE
    (30) expression -> . FALSE

    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 22
    NAME            shift and go to state 23
    TRUE            shift and go to state 24
    FALSE           shift and go to state 25

    expression                     shift and go to state 21

state 13

    (5) statement -> NAME AFFECT . expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression AND expression
    (22) expression -> . expression OR expression
    (23) expression -> . expression INF expression
    (24) expression -> . expression SUP expression
    (25) expression -> . expression EQUALS expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . NAME
    (29) expression -> . TRUE
    (30) expression -> . FALSE

    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 22
    NAME            shift and go to state 23
    TRUE            shift and go to state 24
    FALSE           shift and go to state 25

    expression                     shift and go to state 26

state 14

    (15) statement -> NAME LPAREN . RPAREN
    (16) statement -> NAME LPAREN . multiExpr RPAREN
    (11) multiExpr -> . expression VIRG multiExpr
    (12) multiExpr -> . expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression AND expression
    (22) expression -> . expression OR expression
    (23) expression -> . expression INF expression
    (24) expression -> . expression SUP expression
    (25) expression -> . expression EQUALS expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . NAME
    (29) expression -> . TRUE
    (30) expression -> . FALSE

    RPAREN          shift and go to state 27
    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 22
    NAME            shift and go to state 23
    TRUE            shift and go to state 24
    FALSE           shift and go to state 25

    multiExpr                      shift and go to state 28
    expression                     shift and go to state 29

state 15

    (6) statement -> IF LPAREN . expression RPAREN LACCOLADE bloc RACCOLADE
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression AND expression
    (22) expression -> . expression OR expression
    (23) expression -> . expression INF expression
    (24) expression -> . expression SUP expression
    (25) expression -> . expression EQUALS expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . NAME
    (29) expression -> . TRUE
    (30) expression -> . FALSE

    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 22
    NAME            shift and go to state 23
    TRUE            shift and go to state 24
    FALSE           shift and go to state 25

    expression                     shift and go to state 30

state 16

    (7) statement -> WHILE LPAREN . expression RPAREN LACCOLADE bloc RACCOLADE
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression AND expression
    (22) expression -> . expression OR expression
    (23) expression -> . expression INF expression
    (24) expression -> . expression SUP expression
    (25) expression -> . expression EQUALS expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . NAME
    (29) expression -> . TRUE
    (30) expression -> . FALSE

    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 22
    NAME            shift and go to state 23
    TRUE            shift and go to state 24
    FALSE           shift and go to state 25

    expression                     shift and go to state 31

state 17

    (8) statement -> FOR LPAREN . statement SEMICOLON expression SEMICOLON statement RPAREN LACCOLADE bloc RACCOLADE
    (4) statement -> . PRINT LPAREN expression RPAREN
    (5) statement -> . NAME AFFECT expression
    (6) statement -> . IF LPAREN expression RPAREN LACCOLADE bloc RACCOLADE
    (7) statement -> . WHILE LPAREN expression RPAREN LACCOLADE bloc RACCOLADE
    (8) statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LACCOLADE bloc RACCOLADE
    (13) statement -> . FUNCTION NAME LPAREN RPAREN LACCOLADE bloc RACCOLADE
    (14) statement -> . FUNCTION NAME LPAREN multiname RPAREN LACCOLADE bloc RACCOLADE
    (15) statement -> . NAME LPAREN RPAREN
    (16) statement -> . NAME LPAREN multiExpr RPAREN

    PRINT           shift and go to state 4
    NAME            shift and go to state 5
    IF              shift and go to state 6
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    FUNCTION        shift and go to state 9

    statement                      shift and go to state 32

state 18

    (13) statement -> FUNCTION NAME . LPAREN RPAREN LACCOLADE bloc RACCOLADE
    (14) statement -> FUNCTION NAME . LPAREN multiname RPAREN LACCOLADE bloc RACCOLADE

    LPAREN          shift and go to state 33


state 19

    (2) bloc -> bloc statement SEMICOLON .

    PRINT           reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    NAME            reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    IF              reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    WHILE           reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    FOR             reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    FUNCTION        reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    $end            reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    RACCOLADE       reduce using rule 2 (bloc -> bloc statement SEMICOLON .)


state 20

    (26) expression -> LPAREN . expression RPAREN
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression AND expression
    (22) expression -> . expression OR expression
    (23) expression -> . expression INF expression
    (24) expression -> . expression SUP expression
    (25) expression -> . expression EQUALS expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . NAME
    (29) expression -> . TRUE
    (30) expression -> . FALSE

    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 22
    NAME            shift and go to state 23
    TRUE            shift and go to state 24
    FALSE           shift and go to state 25

    expression                     shift and go to state 34

state 21

    (4) statement -> PRINT LPAREN expression . RPAREN
    (17) expression -> expression . PLUS expression
    (18) expression -> expression . TIMES expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . DIVIDE expression
    (21) expression -> expression . AND expression
    (22) expression -> expression . OR expression
    (23) expression -> expression . INF expression
    (24) expression -> expression . SUP expression
    (25) expression -> expression . EQUALS expression

    RPAREN          shift and go to state 35
    PLUS            shift and go to state 36
    TIMES           shift and go to state 37
    MINUS           shift and go to state 38
    DIVIDE          shift and go to state 39
    AND             shift and go to state 40
    OR              shift and go to state 41
    INF             shift and go to state 42
    SUP             shift and go to state 43
    EQUALS          shift and go to state 44


state 22

    (27) expression -> NUMBER .

    RPAREN          reduce using rule 27 (expression -> NUMBER .)
    PLUS            reduce using rule 27 (expression -> NUMBER .)
    TIMES           reduce using rule 27 (expression -> NUMBER .)
    MINUS           reduce using rule 27 (expression -> NUMBER .)
    DIVIDE          reduce using rule 27 (expression -> NUMBER .)
    AND             reduce using rule 27 (expression -> NUMBER .)
    OR              reduce using rule 27 (expression -> NUMBER .)
    INF             reduce using rule 27 (expression -> NUMBER .)
    SUP             reduce using rule 27 (expression -> NUMBER .)
    EQUALS          reduce using rule 27 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 27 (expression -> NUMBER .)
    VIRG            reduce using rule 27 (expression -> NUMBER .)


state 23

    (28) expression -> NAME .

    RPAREN          reduce using rule 28 (expression -> NAME .)
    PLUS            reduce using rule 28 (expression -> NAME .)
    TIMES           reduce using rule 28 (expression -> NAME .)
    MINUS           reduce using rule 28 (expression -> NAME .)
    DIVIDE          reduce using rule 28 (expression -> NAME .)
    AND             reduce using rule 28 (expression -> NAME .)
    OR              reduce using rule 28 (expression -> NAME .)
    INF             reduce using rule 28 (expression -> NAME .)
    SUP             reduce using rule 28 (expression -> NAME .)
    EQUALS          reduce using rule 28 (expression -> NAME .)
    SEMICOLON       reduce using rule 28 (expression -> NAME .)
    VIRG            reduce using rule 28 (expression -> NAME .)


state 24

    (29) expression -> TRUE .

    RPAREN          reduce using rule 29 (expression -> TRUE .)
    PLUS            reduce using rule 29 (expression -> TRUE .)
    TIMES           reduce using rule 29 (expression -> TRUE .)
    MINUS           reduce using rule 29 (expression -> TRUE .)
    DIVIDE          reduce using rule 29 (expression -> TRUE .)
    AND             reduce using rule 29 (expression -> TRUE .)
    OR              reduce using rule 29 (expression -> TRUE .)
    INF             reduce using rule 29 (expression -> TRUE .)
    SUP             reduce using rule 29 (expression -> TRUE .)
    EQUALS          reduce using rule 29 (expression -> TRUE .)
    SEMICOLON       reduce using rule 29 (expression -> TRUE .)
    VIRG            reduce using rule 29 (expression -> TRUE .)


state 25

    (30) expression -> FALSE .

    RPAREN          reduce using rule 30 (expression -> FALSE .)
    PLUS            reduce using rule 30 (expression -> FALSE .)
    TIMES           reduce using rule 30 (expression -> FALSE .)
    MINUS           reduce using rule 30 (expression -> FALSE .)
    DIVIDE          reduce using rule 30 (expression -> FALSE .)
    AND             reduce using rule 30 (expression -> FALSE .)
    OR              reduce using rule 30 (expression -> FALSE .)
    INF             reduce using rule 30 (expression -> FALSE .)
    SUP             reduce using rule 30 (expression -> FALSE .)
    EQUALS          reduce using rule 30 (expression -> FALSE .)
    SEMICOLON       reduce using rule 30 (expression -> FALSE .)
    VIRG            reduce using rule 30 (expression -> FALSE .)


state 26

    (5) statement -> NAME AFFECT expression .
    (17) expression -> expression . PLUS expression
    (18) expression -> expression . TIMES expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . DIVIDE expression
    (21) expression -> expression . AND expression
    (22) expression -> expression . OR expression
    (23) expression -> expression . INF expression
    (24) expression -> expression . SUP expression
    (25) expression -> expression . EQUALS expression

    SEMICOLON       reduce using rule 5 (statement -> NAME AFFECT expression .)
    RPAREN          reduce using rule 5 (statement -> NAME AFFECT expression .)
    PLUS            shift and go to state 36
    TIMES           shift and go to state 37
    MINUS           shift and go to state 38
    DIVIDE          shift and go to state 39
    AND             shift and go to state 40
    OR              shift and go to state 41
    INF             shift and go to state 42
    SUP             shift and go to state 43
    EQUALS          shift and go to state 44


state 27

    (15) statement -> NAME LPAREN RPAREN .

    SEMICOLON       reduce using rule 15 (statement -> NAME LPAREN RPAREN .)
    RPAREN          reduce using rule 15 (statement -> NAME LPAREN RPAREN .)


state 28

    (16) statement -> NAME LPAREN multiExpr . RPAREN

    RPAREN          shift and go to state 45


state 29

    (11) multiExpr -> expression . VIRG multiExpr
    (12) multiExpr -> expression .
    (17) expression -> expression . PLUS expression
    (18) expression -> expression . TIMES expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . DIVIDE expression
    (21) expression -> expression . AND expression
    (22) expression -> expression . OR expression
    (23) expression -> expression . INF expression
    (24) expression -> expression . SUP expression
    (25) expression -> expression . EQUALS expression

    VIRG            shift and go to state 46
    RPAREN          reduce using rule 12 (multiExpr -> expression .)
    PLUS            shift and go to state 36
    TIMES           shift and go to state 37
    MINUS           shift and go to state 38
    DIVIDE          shift and go to state 39
    AND             shift and go to state 40
    OR              shift and go to state 41
    INF             shift and go to state 42
    SUP             shift and go to state 43
    EQUALS          shift and go to state 44


state 30

    (6) statement -> IF LPAREN expression . RPAREN LACCOLADE bloc RACCOLADE
    (17) expression -> expression . PLUS expression
    (18) expression -> expression . TIMES expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . DIVIDE expression
    (21) expression -> expression . AND expression
    (22) expression -> expression . OR expression
    (23) expression -> expression . INF expression
    (24) expression -> expression . SUP expression
    (25) expression -> expression . EQUALS expression

    RPAREN          shift and go to state 47
    PLUS            shift and go to state 36
    TIMES           shift and go to state 37
    MINUS           shift and go to state 38
    DIVIDE          shift and go to state 39
    AND             shift and go to state 40
    OR              shift and go to state 41
    INF             shift and go to state 42
    SUP             shift and go to state 43
    EQUALS          shift and go to state 44


state 31

    (7) statement -> WHILE LPAREN expression . RPAREN LACCOLADE bloc RACCOLADE
    (17) expression -> expression . PLUS expression
    (18) expression -> expression . TIMES expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . DIVIDE expression
    (21) expression -> expression . AND expression
    (22) expression -> expression . OR expression
    (23) expression -> expression . INF expression
    (24) expression -> expression . SUP expression
    (25) expression -> expression . EQUALS expression
